CreativeTab and behaviour

--- a/src/main/resources/assets/obsidure/lang/en_us.json
+++ b/src/main/resources/assets/obsidure/lang/en_us.json
@@ -1,4 +1,6 @@
 {
   "item.obsidure.obsidure_ingot": "Obsidure Ingot",
-  "item.obsidure.obsidure_fragment": "Obsidure Fragment"
+  "item.obsidure.obsidure_fragment": "Obsidure Fragment",
+  "block.obsidure.obsidure_ore": "Obsidure Ore",
+  "itemGroup.obsidureTab": "Obsidure"
 }
